# SC2MapAnalysis

./: .flake8  .gitignore  CHANGELOG.md  Makefile  build.py  build_working.py  pyproject.toml  run.py  vb.py
.github/workflows/: build_and_release.yml  build_c_extension.yml  build_on_setup.yml  lint.yml  orchestrator.yml  release.yml  tests.yml
MapAnalyzer/: MapData.py  __init__.py  constructs.py
examples/MassReaper/: run.py
ladder_build/: Dockerfile
map_analyzer/: MapData.py  __init__.py
map_analyzer/cext/: mapanalyzerext.cp310-win_amd64.pyd  mapanalyzerext.cp311-win_amd64.pyd  mapanalyzerext.cp312-win_amd64.pyd
tests/: mocksetup.py  test_pathihng.py  test_suite.py
